# gazebo_useful_plugins

./: CMakeLists.txt  README.md  package.xml
doc/: CMakeLists.txt  doc.txt
doc/src/: odometry.cpp
launch/: gazebo_centauro.launch
src/: centauro_plugin.cpp  gazebo_tf_injector.cpp  gazebo_tf_plugin.cpp
